--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,11 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aquí tenemos un post</h1>
-        <p>Parrafo</p>
+        <div id="container">
+            <div id="post"></div>
+               <h1>Título del post</h1>
+              <p>Aquí tenemos el párrafo de inicio donde se van a explicar
+                  cosas pero mientras hago un lorem ipsum vale</p>
+        </div>
     </body>
 </html>
