--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <div id="container">
+                <div id="cabecera">
+                    Cabecera
+                </div>
             <div id="post"></div>
                <h1>Título del post</h1>
               <p>Aquí tenemos el párrafo de inicio donde se van a explicar
