finalizada la cabecera diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
     <body>
         <div id="container">
                 <div id="cabecera">
-                    Cabecera
+                    Hyperblog
+                    <span id="tagline">Tu blog de confianza</span>
                 </div>
             <div id="post"></div>
                <h1>Título del post</h1>
@@ -17,4 +18,4 @@
                   cosas pero mientras hago un lorem ipsum vale</p>
         </div>
     </body>
-</html>
+</html> 
