--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,15 @@
     </head>
     <body>
         <div id="container">
+                <div id="cabecera">
+                    Hyperblog
+                    <span id="tagline">Tu blog de confianza </span>
+                </div>
             <div id="post"></div>
                <h1>Título del post</h1>
               <p>Aquí tenemos el párrafo de inicio donde se van a explicar
                   cosas pero mientras hago un lorem ipsum vale</p>
+                  <p>>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum sed ullam quis doloremque? Eos laboriosam perferendis aspernatur. Consequatur cupiditate vitae eveniet dolore dolorum quas. Omnis ad unde laudantium delectus laborum.</p>
         </div>
     </body>
-</html>
+</html> 
