--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Titulo del post</title>
+        <title>WELCOME TO HYPERBLOG</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
